meta_description variables

--- a/about.html
+++ b/about.html
@@ -3,6 +3,8 @@ layout: default
 title: About
 permalink: /about/
 class: about
+meta_description: About page meta description text
+meta_author: About Author
 ---
 <div class="container product-page-header">
 	<div class="row">
