--- a/cad-library.html
+++ b/cad-library.html
@@ -3,6 +3,8 @@ layout: default
 title: CAD Library
 permalink: /cad-library/
 class: cad-library
+meta_description: CAD Library page meta description text
+meta_author: CAD Library Author
 ---
 <div class="container">
 	<div class="row">
