--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 title: Home
+meta_description: Home page meta description text
+meta_author: Home Author
 permalink: /
 class: home
 ---
