--- a/products.html
+++ b/products.html
@@ -2,6 +2,8 @@
 layout: default
 title: Products
 permalink: /products/
+meta_description: Products page meta description text
+meta_author: Products Author
 class: products
 ---
 <div class="container product-page-header">
