--- a/resources.html
+++ b/resources.html
@@ -2,6 +2,8 @@
 layout: default
 title: Resources
 permalink: /resources/
+meta_description: Resources page meta description text
+meta_author: Resources Author
 class: resources
 ---
 <div class="container">
