--- a/why.html
+++ b/why.html
@@ -2,6 +2,8 @@
 layout: default
 title: Why Airex
 permalink: /why/
+meta_description: Why page meta description text
+meta_author: Why Author
 class: why
 ---
 <div class="container">
