--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,8 @@
 layout: default
 title: Contact
 permalink: /contact/
+meta_description: Contact page meta description text
+meta_author: Contact Author
 ---
 <div class="container">
 	<div class="row">
